📝 CodeRabbit Chat: Add unit tests for PR changes